@@ -1,3 +1,9 @@
+2015-03-30 Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libgfortran/59513
+	* io/transfer.c (data_transfer_init): Do not error for
+	-std=legacy.
+
 2015-03-22  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR libgfortran/60956
